@@ -7,10 +7,11 @@ features:
 
 parameters:
 - new parameter misc/debugsol to specify a debug solution that should be checked during the solve
-
-parameters:
 - fixed typo: heuristics/completesol/maxunkownrate has changed to heuristics/completesol/maxunknownrate
 - new parameters: beforepresol, maxlpiter, and maxcontvars in heur_completesol.c
+
+interface:
+- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node
 
 performance improvements:
 - add and use RESTRICT macro for some pointers
